--- a/collapsingtoolbarlayout-subtitle/src/main/res/values/styles.xml
+++ b/collapsingtoolbarlayout-subtitle/src/main/res/values/styles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="Widget.Design.SubtitleCollapsingToolbar" parent="android:Widget">
         <item name="expandedTitleMargin">32dp</item>
         <item name="statusBarScrim">?attr/colorPrimaryDark</item>
@@ -13,5 +14,5 @@
         <item name="android:textColor">?android:attr/textColorSecondary</item>
     </style>
 
-    <style name="Widget.MaterialComponents.SubtitleCollapsingToolbar" parent="Widget.Design.CollapsingToolbar" />
+    <style name="Widget.MaterialComponents.SubtitleCollapsingToolbar" parent="Widget.Design.SubtitleCollapsingToolbar" />
 </resources>
