--- a/collapsingtoolbarlayout-subtitle/src/test/res/values/styles.xml
+++ b/collapsingtoolbarlayout-subtitle/src/test/res/values/styles.xml
@@ -1,22 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
-        <item name="subtitleCollapsingToolbarLayoutStyle">@style/ToolbarLayoutTheme</item>
+
+    <style name="Theme.Main" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+        <item name="subtitleCollapsingToolbarLayoutStyle">@style/Widget.ToolbarLayout.Main</item>
     </style>
 
-    <style name="ToolbarLayoutTheme" parent="Widget.MaterialComponents.SubtitleCollapsingToolbar">
-        <item name="title">Title</item>
-        <item name="subtitle">Subtitle</item>
+    <style name="Widget.ToolbarLayout.Main" parent="Widget.MaterialComponents.SubtitleCollapsingToolbar">
+        <item name="expandedTitleMargin">5px</item>
         <item name="contentScrim">#ff0000</item>
         <item name="statusBarScrim">#00ff00</item>
+        <item name="scrimVisibleHeightTrigger">10px</item>
+        <item name="scrimAnimationDuration">20</item>
         <item name="expandedTitleGravity">start</item>
         <item name="collapsedTitleGravity">end</item>
-        <item name="expandedTitleMargin">10dp</item>
+        <item name="title">Title</item>
+        <item name="subtitle">Subtitle</item>
         <item name="titleCollapseMode">fade</item>
         <item name="titleMaxLines">2</item>
         <item name="subtitleMaxLines">3</item>
         <item name="forceApplySystemWindowInsetTop">true</item>
         <item name="titleExtraMultilineHeightEnabled">true</item>
         <item name="subtitleExtraMultilineHeightEnabled">true</item>
+        <item name="titlePositionInterpolator">@android:interpolator/bounce</item>
+    </style>
+
+    <style name="Theme.Margin" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+        <item name="subtitleCollapsingToolbarLayoutStyle">@style/Widget.ToolbarLayout.Margin</item>
+    </style>
+
+    <style name="Widget.ToolbarLayout.Margin" parent="Widget.MaterialComponents.SubtitleCollapsingToolbar">
+        <item name="expandedTitleMarginStart">1px</item>
+        <item name="expandedTitleMarginEnd">2px</item>
+        <item name="expandedTitleMarginTop">3px</item>
+        <item name="expandedTitleMarginBottom">4px</item>
+    </style>
+
+    <style name="TextAppearance.Collapsed.Text" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#ff0000</item>
+        <item name="android:textSize">1px</item>
+    </style>
+
+    <style name="TextAppearance.Collapsed.Text2" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#00ff00</item>
+        <item name="android:textSize">2px</item>
+    </style>
+
+    <style name="TextAppearance.Expanded.Text" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#0000ff</item>
+        <item name="android:textSize">3px</item>
+    </style>
+
+    <style name="TextAppearance.Expanded.Text2" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#ffff00</item>
+        <item name="android:textSize">4px</item>
     </style>
 </resources>
